--- a/ansible/playbooks/site.yaml
+++ b/ansible/playbooks/site.yaml
@@ -1,4 +1,20 @@
 ---
-# Main playbook - will configure backend and frontend servers
-# To be completed in Task 6
+# Main playbook - Configure backend servers first, then frontend
+
+- name: Configure Backend HTTPD Servers
+  hosts: backends
+  become: yes
+  roles:
+    - backend
+
+- name: Configure Frontend Nginx Load Balancer
+  hosts: frontend
+  become: yes
+  vars:
+    # Dynamically gather backend private IPs from inventory
+    backend1_private_ip: "{{ hostvars[groups['backends'][0]]['ansible_default_ipv4']['address'] }}"
+    backend2_private_ip: "{{ hostvars[groups['backends'][1]]['ansible_default_ipv4']['address'] }}"
+    backup_backend_private_ip: "{{ hostvars[groups['backends'][2]]['ansible_default_ipv4']['address'] }}"
+  roles:
+    - frontend
 
