--- a/ansible/roles/backend/handlers/main.yml
+++ b/ansible/roles/backend/handlers/main.yml
@@ -1,3 +1,9 @@
-#SPDX-License-Identifier: MIT-0
 ---
 # handlers file for backend
+
+- name: Restart httpd
+  service:
+    name: httpd
+    state: restarted
+  become: yes
+
