--- a/ansible/roles/backend/tasks/main.yml
+++ b/ansible/roles/backend/tasks/main.yml
@@ -1,3 +1,27 @@
-#SPDX-License-Identifier: MIT-0
 ---
 # tasks file for backend
+
+- name: Install httpd
+  yum:
+    name: httpd
+    state: present
+    update_cache: yes
+  become: yes
+
+- name: Enable and start httpd service
+  service:
+    name: httpd
+    state: started
+    enabled: yes
+  become: yes
+
+- name: Deploy backend index page
+  template:
+    src: backend_index.html.j2
+    dest: /var/www/html/index.html
+    owner: apache
+    group: apache
+    mode: '0644'
+  become: yes
+  notify: Restart httpd
+
