--- a/ansible/roles/frontend/handlers/main.yml
+++ b/ansible/roles/frontend/handlers/main.yml
@@ -1,3 +1,9 @@
-#SPDX-License-Identifier: MIT-0
 ---
 # handlers file for frontend
+
+- name: Restart nginx
+  service:
+    name: nginx
+    state: restarted
+  become: yes
+
