--- a/ansible/roles/frontend/tasks/main.yml
+++ b/ansible/roles/frontend/tasks/main.yml
@@ -1,3 +1,27 @@
-#SPDX-License-Identifier: MIT-0
 ---
 # tasks file for frontend
+
+- name: Install nginx
+  yum:
+    name: nginx
+    state: present
+    update_cache: yes
+  become: yes
+
+- name: Deploy nginx configuration
+  template:
+    src: nginx_frontend.conf.j2
+    dest: /etc/nginx/nginx.conf
+    owner: root
+    group: root
+    mode: '0644'
+  become: yes
+  notify: Restart nginx
+
+- name: Enable and start nginx
+  service:
+    name: nginx
+    state: started
+    enabled: yes
+  become: yes
+
